# test_cmake_pyfind

.github/workflows/: blank.yml
newPyFind/: CMakeLists.txt
oldPyFind/: CMakeLists.txt
