cmake_minimum_required(VERSION 3.4)

set(
    Python_ADDITIONAL_VERSIONS
    3.4
    3.5
    3.6
    3.7
    3.8
)

find_package(PythonInterp 3)
find_package(PythonLibs 3)
message(STATUS "PYTHON_EXECUTABLE ${PYTHON_EXECUTABLE}")
message(STATUS "PYTHON_VERSION_STRING (interp) ${PYTHON_VERSION_STRING}")
message(STATUS "PYTHON_INCLUDE_DIRS ${PYTHON_INCLUDE_DIRS}")
message(STATUS "Python3_RUNTIME_LIBRARY_DIRS ${Python3_RUNTIME_LIBRARY_DIRS}")
message(STATUS "PYTHON_LIBS_VERSION_STRING ${PYTHONLIBS_VERSION_STRING}")
